[gd_scene load_steps=4 format=3 uid="uid://dc8uekw6jsm7b"]

[ext_resource type="Script" path="res://Prog52aFunc.gd" id="1_6cavk"]
[ext_resource type="Script" path="res://txtWid.gd" id="2_53hok"]

[sub_resource type="LabelSettings" id="LabelSettings_ncjm2"]
font_size = 30

[node name="Prog52aFunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cavk")

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 516.0
offset_right = 285.0
offset_bottom = 645.0
text = "Calculate "

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 518.0
offset_right = 701.0
offset_bottom = 647.0
text = "Clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 523.0
offset_right = 1153.0
offset_bottom = 652.0
text = "Exit "

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 69.0
offset_right = 549.0
offset_bottom = 199.0
text = "Length: "
label_settings = SubResource("LabelSettings_ncjm2")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 138.0
offset_right = 549.0
offset_bottom = 268.0
text = "Width: "
label_settings = SubResource("LabelSettings_ncjm2")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 238.0
offset_right = 1091.0
offset_bottom = 475.0
label_settings = SubResource("LabelSettings_ncjm2")

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = 62.0
offset_right = 766.0
offset_bottom = 124.0

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 148.0
offset_right = 764.0
offset_bottom = 210.0
script = ExtResource("2_53hok")

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
